# gke-node-termination-notifier

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: development-build.yaml  master-build.yaml
deploy/helm-charts/gke-node-termination-notifier/: Chart.yaml  values.yaml
deploy/helm-charts/gke-node-termination-notifier/templates/: _helpers.tpl  daemonset.yaml
deploy/kustomization/: daemonset.yaml
deploy/kustomize/: daemonset.yaml
src/gkentn/: main.py
src/gkentn/core/: __init__.py  handler.py  notifier.py
src/gkentn/utils/: logger.py  slack.py
