[tool.poetry]
name = "gke-node-termination-notifier"
version = "0.1.0"
description = ""
authors = ["gumigumi4f <gumigumi4f@gmail.com>"]
packages = [
    {include="gkentn", from="src"},
]

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-compute = "^0.9.0"
slack-sdk = "^3.13.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pyproject-flake8 = "^0.0.1-alpha.2"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.920"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,E501,W503,"

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
