[tool.poetry]
name = "gke-node-termination-notifier"
version = "0.1.0"
description = ""
authors = ["gumigumi4f <gumigumi4f@gmail.com>"]
packages = [
    {include="gkentn", from="src"},
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
slack-sdk = "^3.27.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
types-requests = "^2.31.0.20240406"

[tool.poetry.scripts]
gkentn = "gkentn.main:main"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,E501,W503,"

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
